...
                  if (!_isRunning) {
                    _timeRemaining = _getSessionDuration();
                  }
                });
                Navigator.pop(context);
              },
              child: const Text('Salvar'),
            ),
          ],
        );
      },
    );
  }
...
